# Build 5.11.0.1 Release 10/28/2025
  1. Proxy server reconnects now bypass conn-spam blocks
  2. New Save vs Polymorph saving throw, also applies to petrification
  3. New Spell: Resist Polymorph
  4. New thief skill: Garrote
  5. Nasty bug fixed: LONGTEXT fields in MySQL DBs created as TEXT.

# Build 5.11.0 Release 10/23/2025
  1. CoffeeMud now has an optional Proxy server.  See installation guide.
  2. CoffeeMud now integrates with LLMs via LangChain4J.  See installation guide.
  3. New admin command: LLM, for chatting with your AI, and Scriptable has MPLLM
  4. Immunities and TemporaryImmunity can now include effects/behaviors.
  5. NOCHANNEL can now be given an ellapsed time.
  6. ! command can now match previous history.
  7. Siplet can now do, as Sip does: have a input-boxless screen.
  8. FLEE now prefers the previous room direction.
  9. TRAINing now prompts the user to confirm.
 10. AWARDS/AutoProperties can now be modified from the CL.
 11. STAT command can be limited with FULSTATS disable flag and lists.ini file.
 12. Predict Tides gives a bit more information to Mer.
 13. RELOAD is now a synonym for the player LOAD command, as it should always have been.
 14. New fighter/ranger skills: Pistolwhip, AutoPistolwhip, Rapid Reload
 15. GMCP: new room.exits command, expanded char.effects and skills: see Protocols guide.
 16. FoodPrep now supports slicing all foods, and MasterFoodPrep lets you chop them up.
 17. AFFECT can now both filter and sort its results for you.
 18. New Locale type: AutoGrid, gets its rooms from the random areas files.
 19. New common skill: Embellishing
 20. New MOODs: passive, horny, queer, submissive, and lusty
 21. Tons of localization enhancements: see Installation Guide for details.
 22. New GenPoison for making your own global poisons, and UniPoison for unique ones.
 23. New prayers: Bolster Poison, Addicting Curse
 24. FasterRecovery can now slow recovery, including %.  See AHELP