@@ -1097,9 +1097,12 @@ narrowing term.<br />
 The following are useful narrowing terms:<br />
       <ul>
         <li><span style="font-family: monospace;">AREAS</span> to use
-the unique set of areas in which the prior term is located</li>
+the unique set of areas in which the prior term is located</li><li><span style="font-family: monospace;">AREA</span> to use
+the area in which the prior term is located</li>
         <li><span style="font-family: monospace;">ROOMS</span> to use
 the unique set of rooms in which the prior term is located, or which
+the prior term contains</li><li><span style="font-family: monospace;">ROOM</span> to use
+the&nbsp;room in which the prior term is located, or which
 the prior term contains</li>
         <li><span style="font-family: monospace;">NPROOMS</span> to use
 the unique set of rooms in which the prior term is located, or which
@@ -1111,7 +1114,8 @@ the prior term contains</li>
 use mobs in a room or area, or nearby mobs for others</li>
         <li><span style="font-family: monospace;">MOB</span> to
 use the set of all mob&nbsp;contained in the prior term, or ensure the
-simple Mob result of a query</li>
+simple Mob result of a query</li><li><span style="font-family: monospace;">GROUP</span> to
+use the set of group members belonged to by the mob members of the prior term.</li>
         <li><span style="font-family: monospace;">ITEMS</span> to
 use all items in a roow or area, or nearby items for others</li>
         <li><span style="font-family: monospace;">ITEM</span> to
@@ -1134,7 +1138,7 @@ use the set of all non-player mobs contained in the prior term, or
 ensure the simple Mob result of a query<br />
         </li>
         <li><span style="font-family: monospace;">EQUIPMENT</span> to
-use the set of all &nbsp;worn items of the prior term</li>
+use the set of all &nbsp;worn items of the prior term</li><li><span style="font-family: monospace;">SHOPITEMS</span> to use the shopkeeper items held by the prior term</li><li><span style="font-family: monospace;">SHOP</span> to use the shop object for the prior term.</li>
         <li><span style="font-family: monospace;">ABILITIES</span> to
 use the set of all &nbsp;abilities of the prior term</li>
         <li><span style="font-family: monospace;">PROPERTIES</span> to
