@@ -501,6 +501,7 @@ The following are useful narrowing terms:\n\r\
     * EXITS to use the set of applicable exits\n\r\
     * PLAYER to use the player npc applicable\n\r\
     * MOB to use the mob object applicable\n\r\
+    * GROUP to use the group members of the mob object applicable\n\r\
     * NPCS, NPC to use the npc mob objects applicable\n\r\
     * ITEM to use the item object applicable\n\r\
     * EQUIPMENT to use the equipment item applicable\n\r\
